// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MakeImage matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <ul
      class="MuiGridList-root makeStyles-gridlist-2"
      style="margin: 0px;"
    >
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 1"
            src="src 1"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 2"
            src="src 2"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 3"
            src="src 3"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 4"
            src="src 4"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="twitterId"
            src="image"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 5"
            src="src 5"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 6"
            src="src 6"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 7"
            src="src 7"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="alt 8"
            src="src 8"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`MakeImage matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <ul
      class="MuiGridList-root makeStyles-gridlist-2"
      style="margin: 0px;"
    >
      <li
        class="MuiGridListTile-root"
        style="width: 100%; height: 360px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="trackName"
            src="src"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
